Support site unregistration workflow initiated from a site-portal
FML manager will process the event and sync this to all the sites. While the initiating site will also update the impacted projects.

All the project data from the unregistered site will be marked as dismissed.
